welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:24: error: ':' expected but ')' found.
def isFacingTrail(couleur) : Boolean = {
                         ^SlugSnail:44: error: identifier expected but '}' found.
}
^